# nudt-sysy-compiler-csc2024-origin

./: .clang-format  .gitignore  1.sh  CMakeLists.txt  Doxyfile  InstInfoDecl.hpp  InstInfoImpl.hpp  README.md  antlr4compile.sh  antlr4cpp.sh  antlr4run.sh  checklist.md  cleanshell.sh  cmake.sh  float.c  gen.ll  gen.py  gen.sh  install.sh  lli  qemu.sh  res_24.7.3.txt  test-beta.sh  test.c  test.ll  test.py  test.sh  test_asm.sh  testfunctional.sh  testrv.sh
.workflow/: master-pipeline.yml  pipeline-test.yml
doc/: Debug.md  antlr4.md  codegen.md  cpp_stl.md  exp00-environment.pptx  exp01-antlr.pptx  llvm_codegen.md  llvm_doc.md  llvm_pass.md  llvmir.md  (+2 more)
src/: ASTPrinter.cpp  ASTPrinter.h  CMakeLists.txt  SysY.g4  SysY.interp  SysY.tokens  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYLexerRules.g4  SysYParser.cpp  SysYParser.h  SysYVisitor.h  driver.cpp  main.cpp  sysyc.cpp  utils.hpp
src/antlr4/: SysY.g4
src/ir/: CMakeLists.txt  ConstantBeta.cpp  ConstantReplace.cpp  ConstantValue.cpp  InstCopy.cpp  builder.cpp  constant.cpp  f.cpp  function.cpp  global.cpp  infrast.cpp  instructions.cpp  module.cpp  symboltable.cpp  table.cpp  type.cpp  value.cpp
src/ir/include/: builder.hpp  f.hpp  function.hpp  global.hpp  global_value.hpp  infrast.hpp  instructions.hpp  ir.hpp  module.hpp  scev.hpp  symboltable.hpp  table-beta.hpp  table.hpp  table_beta.hpp  type.hpp  utils.hpp  utils_ir.hpp  value.hpp
src/mir/: CFGAnalysis.cpp  CMakeLists.txt  GCRA.cpp  GraphColoringRegisterAllocation.cpp  InstSelect.cpp  LiveInterval.cpp  LoweringContext.cpp  Peephole.cpp  RegisterAllocator.cpp  Schedule.cpp  ScheduleModel.cpp  SimplifyCFG.cpp  allocator.cpp  fastAllocator.cpp  frameinfo.cpp  instinfo.cpp  insts.cpp  iselinfo.cpp  lowering.cpp  mir.cpp  registerinfo.cpp  stackallocation.cpp  target.cpp  utils.cpp
src/mir/RegisterAllocator/: FastAllocator.cpp  GCRA.cpp  GraphColoringRegisterAllocation.cpp  MixedRegisterAllocator.cpp  fastAllocator.cpp  linearAllocator.cpp
src/mir/Scheduler/: BlockLayoutOpt.cpp  IntraBlockScheduler.cpp  Schedule.cpp
src/pass/: analysisinfo.cpp  pass.cpp  pass.hpp
src/pass/analysis/: CFGAnalysis.cpp  CFGPrinter.cpp  CMakeLists.txt  ControlFlowGraph.cpp  LCSSA.cpp  MarkParallel.cpp  callgraph.cpp  dom.cpp  indvar.cpp  irtest.cpp  loop.cpp  pdom.cpp  preorder.cpp  sideEffectAnalysis.cpp
src/pass/analysis/dependenceAnalysis/: DependenceAnalysis.cpp  dpaUtils.cpp
src/pass/optimize/: ADCE.cpp  CMakeLists.txt  DAE.cpp  DCE.cpp  DLAE.cpp  DLE.cpp  DSE.cpp  DeadLoopElimination.cpp  GCM.cpp  GVN.cpp  GepSplit.cpp  GlobalToLocal.cpp  LICM.cpp  LoopBodyExtract.cpp  LoopParallel.cpp  NewGVN.cpp  SCCP.cpp  SCEV.cpp  SCP.cpp  SROA.cpp  SimpleConstPropagation.cpp  TCO.cpp  aggressiveG2L.cpp  indvarEndvarRepl.cpp  inline.cpp  licm.cpp  loopdivest.cpp  loopsimplify.cpp  loopsplit.cpp  loopunroll.cpp  mem2reg.cpp  mySCCP.cpp  optimize.hpp  reassociate.cpp  reg2mem.cpp  simplifyCFG.cpp
src/pass/optimize/CFG/: simplifyCFG.cpp
src/pass/optimize/DCE/: ADCE.cpp  DAE.cpp  DCE.cpp  DLE.cpp  DSE.cpp  DeadLoopElimination.cpp
src/pass/optimize/IPO/: TCO.cpp  inline.cpp
src/pass/optimize/InstCombine/: ArithmeticReduce.cpp
src/pass/optimize/Loop/: LoopBodyExtract.cpp  LoopInterChange.cpp  LoopParallel.cpp  LoopUtils.cpp  ParallelBodyExtract.cpp  loopdivest.cpp  loopsimplify.cpp  loopsplit.cpp  loopunroll.cpp
src/pass/optimize/Misc/: BlockSort.cpp  GepSplit.cpp  StatelessCache.cpp  indvarEndvarRepl.cpp
src/pass/optimize/Scalar/: AG2L.cpp  GCM.cpp  GlobalToLocal.cpp  LICM.cpp  SCEV.cpp  SROA.cpp  aggressiveG2L.cpp  licm.cpp
src/pass/optimize/Utils/: BlockUtils.cpp
src/printer/: sysyc.cpp
src/runtime/: LoopParallel.cpp  LoopParallel.md  compile.py  memset.cpp
src/runtime/Lookup/: Lookup.cpp
src/runtime/LoopParallel/: LoopParallel.cpp  LoopParallel.hpp  cmmcLoopParallel.cpp
src/runtime/MultiThreads/: MultiThreads.cpp  MultiThreads.hpp  test.cpp
src/support/: Profiler.cpp  arena.cpp  config.cpp
src/visitor/: CMakeLists.txt  utils.hpp  utils_visit.hpp  visitBlockStmt.cpp  visitCall.cpp  visitCompUnit.cpp  visitDecl.cpp  visitExp.cpp  visitFunc.cpp  visitFuncType.cpp  visitStmt.cpp  visitor.cpp  visitor.hpp
(+184 files in other folders)
